src/objects/vlocity_ins__RuleAssignment__c.object
<CustomObject>
    <description>Represents the attachment of a Vlocity Context Rule to something such as a Product, Promotion, Price List or Price List Entry.</description>
    <fields>
        <fullName>vlocity_ins__HeaderId__c</fullName>
        <formula>vlocity_ins__RuleId__r.vlocity_ins__HeaderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleId__c</fullName>
        <label>Vlocity Rule</label>
        <referenceTo>vlocity_ins__Rule__c</referenceTo>
        <relationshipLabel>Vlocity Rule Assignments</relationshipLabel>
        <relationshipName>Vlocity_Rule_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleType__c</fullName>
        <formula>TEXT(vlocity_ins__RuleId__r.vlocity_ins__RuleType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <label>Vlocity Rule Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Rule Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>